# corlinman

./: .dockerignore  .gitignore  .importlinter  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  deny.toml  pnpm-lock.yaml  pyproject.toml
rust/crates/corlinman-agent-client/: Cargo.toml
rust/crates/corlinman-agent-client/src/: classify.rs  client.rs  lib.rs  retry.rs  stream.rs  tool_callback.rs
rust/crates/corlinman-auto-rollback/: Cargo.toml
rust/crates/corlinman-auto-rollback-cli/: Cargo.toml
rust/crates/corlinman-auto-rollback-cli/src/: main.rs
rust/crates/corlinman-auto-rollback/src/: lib.rs  metrics.rs  monitor.rs  revert.rs
rust/crates/corlinman-canvas/: Cargo.toml
rust/crates/corlinman-canvas/src/: cache.rs  lib.rs  protocol.rs
rust/crates/corlinman-canvas/src/adapters/: code.rs  latex.rs  mermaid.rs  mod.rs  sparkline.rs  table.rs
rust/crates/corlinman-canvas/tests/: adapter_code.rs  adapter_latex.rs  adapter_mermaid.rs  adapter_sparkline.rs  adapter_table.rs  protocol_round_trip.rs
rust/crates/corlinman-channels/: Cargo.toml
rust/crates/corlinman-channels/src/: channel.rs  lib.rs  logstream.rs  rate_limit.rs  router.rs  service.rs
rust/crates/corlinman-channels/src/qq/: message.rs  mod.rs  onebot.rs
rust/crates/corlinman-channels/src/telegram/: message.rs  mod.rs  service.rs
rust/crates/corlinman-channels/tests/: onebot_integration.rs  qq_to_chat_e2e.rs  telegram_smoke.rs
rust/crates/corlinman-cli/: Cargo.toml
rust/crates/corlinman-cli/src/: main.rs
rust/crates/corlinman-cli/src/cmd/: config.rs  dev.rs  mod.rs  onboard.rs  plugins.rs  qa.rs  replay.rs  tenant.rs  vector.rs
rust/crates/corlinman-cli/src/cmd/doctor/: mod.rs
rust/crates/corlinman-cli/src/cmd/qa/: bench.rs  runner.rs  scenario.rs
rust/crates/corlinman-cli/tests/: vector_cli.rs
rust/crates/corlinman-core/: Cargo.toml
rust/crates/corlinman-core/src/: backoff.rs  cancel.rs  channel_binding.rs  config.rs  error.rs  lib.rs  manifest.rs  metrics.rs  placeholder.rs  placeholders.rs  session.rs  session_sqlite.rs  types.rs
rust/crates/corlinman-core/tests/: config_example.rs
rust/crates/corlinman-gateway/: Cargo.toml
rust/crates/corlinman-gateway/src/: config_watcher.rs  evolution_applier.rs  evolution_observer.rs  legacy_migration.rs  lib.rs  log_broadcast.rs  log_retention.rs  main.rs  mcp.rs  metrics.rs  py_config.rs  server.rs  shutdown.rs  state.rs  telemetry.rs
rust/crates/corlinman-gateway/src/grpc/: placeholder.rs
rust/crates/corlinman-gateway/src/middleware/: admin_auth.rs  admin_session.rs  approval.rs  auth.rs  mod.rs  tenant_scope.rs  trace.rs
rust/crates/corlinman-gateway/src/placeholder/: episodes.rs  memory.rs  mod.rs
rust/crates/corlinman-gateway/src/routes/: admin.rs  canvas.rs  chat.rs  chat_approve.rs  embeddings.rs  health.rs  memory.rs  mod.rs  models.rs  plugin_callback.rs  voice.rs
rust/crates/corlinman-gateway/src/routes/admin/: api_keys.rs  approvals.rs  auth.rs  channels.rs  config.rs  embedding.rs  evolution.rs  federation.rs  (+12 more)
rust/crates/corlinman-gateway/src/services/: chat_service.rs
rust/crates/corlinman-gateway/src/ws/: logstream.rs  mod.rs
rust/crates/corlinman-gateway/tests/: canvas_host.rs  config_live_reload.rs  evolution_admin_e2e.rs  evolution_applier_e2e.rs  evolution_applier_phase4_e2e.rs  evolution_observer_e2e.rs  mcp_gateway_integration.rs  plugin_callback_e2e.rs  session_history.rs  tenant_admin_routes.rs
rust/crates/corlinman-integration-tests/: Cargo.toml
rust/crates/corlinman-integration-tests/tests/: auto_rollback_loop.rs  b4_full_chain.rs  b5_final.rs  consolidation_e2e.rs  manifest_v1_v2.rs  shadow_loop.rs
rust/crates/corlinman-mcp/: Cargo.toml
rust/crates/corlinman-mcp/examples/: mcp_cli_smoke.rs
rust/crates/corlinman-mcp/src/: error.rs  lib.rs  schema.rs
rust/crates/corlinman-mcp/src/adapters/: mod.rs  prompts.rs  resources.rs  tools.rs
rust/crates/corlinman-mcp/src/client/: mod.rs  stdio.rs
rust/crates/corlinman-mcp/src/server/: auth.rs  dispatch.rs  mod.rs  session.rs  transport.rs
rust/crates/corlinman-mcp/tests/: auth_acl.rs  desktop_fixture.rs  schema_roundtrip.rs  session_handshake.rs
rust/crates/corlinman-mcp/tests/fixtures/: desktop_2024_11_05.json
rust/crates/corlinman-memory-host/: Cargo.toml
rust/crates/corlinman-memory-host/src/: federation.rs  lib.rs  local_sqlite.rs  read_only.rs  remote_http.rs
rust/crates/corlinman-memory-host/tests/: integration.rs
rust/crates/corlinman-newapi-client/: Cargo.toml
rust/crates/corlinman-newapi-client/src/: client.rs  lib.rs  types.rs
rust/crates/corlinman-newapi-client/tests/: client_test.rs
rust/crates/corlinman-plugins/: Cargo.toml
rust/crates/corlinman-plugins/src/: approval.rs  async_task.rs  discovery.rs  lib.rs  manifest.rs  preprocessor.rs  registry.rs  supervisor.rs
rust/crates/corlinman-plugins/src/runtime/: jsonrpc_stdio.rs  mcp_stdio.rs  mod.rs  service_grpc.rs
rust/crates/corlinman-plugins/src/sandbox/: docker.rs  mod.rs
rust/crates/corlinman-plugins/tests/: jsonrpc_sync.rs  mcp_e2e.rs  sandbox_docker.rs  service_plugin_e2e.rs
rust/crates/corlinman-plugins/tests/fixtures/: echo_mcp_server.py
rust/crates/corlinman-proto/: Cargo.toml  build.rs
rust/crates/corlinman-proto/src/: lib.rs
rust/crates/corlinman-replay/: Cargo.toml
rust/crates/corlinman-replay/src/: lib.rs
rust/crates/corlinman-scheduler/: Cargo.toml
rust/crates/corlinman-scheduler/src/: cron.rs  jobs.rs  lib.rs  runtime.rs  subprocess.rs
rust/crates/corlinman-subagent/: Cargo.toml
rust/crates/corlinman-subagent/src/: lib.rs  python_bridge.rs  supervisor.rs  types.rs
rust/crates/corlinman-tenant/: Cargo.toml
rust/crates/corlinman-tenant/src/: admin_schema.rs  id.rs  lib.rs  path.rs  pool.rs
rust/crates/corlinman-tenant/tests/: slug_corpus.rs
rust/crates/corlinman-vector/: Cargo.toml
rust/crates/corlinman-vector/src/: decay.rs  header.rs  hybrid.rs  lib.rs  migration.rs  query.rs  rerank.rs  sqlite.rs  usearch_index.rs
rust/crates/corlinman-vector/tests/: integration.rs
(+390 files in other folders)
