[workspace]
resolver = "2"
members = ["rust/crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.85"
version = "0.6.8"
license = "MIT"
authors = ["corlinman contributors"]
repository = "https://github.com/ymylive/corlinman"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-build = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
validator = { version = "0.20", features = ["derive"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "macros", "parsing"] }
arc-swap = "1"
notify = "6"
walkdir = "2"
tabled = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
backoff = { version = "0.4", features = ["tokio"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "time"] }
usearch = "2"
bollard = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2", "macos-system-configuration"] }
bytes = "1"
tokio-tungstenite = "0.23"
futures-util = "0.3"
http = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
sha2 = "0.10"
toml = "0.8"
argon2 = "0.5"
dirs = "5"
dialoguer = "0.11"
serial_test = "3"
prometheus = "0.13"
cron = "0.12"
dashmap = "6"
which = "6"

# For the core error/cancel/backoff crate
once_cell = "1"

# Internal crate short aliases (kept for documentation; real deps declared per-crate)

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

# Faster release builds for predistribution dogfooding. Inherits from
# release but bumps codegen-units to 16 for ~50% faster builds at a
# small (single-digit %) runtime cost. Use this for CI / dogfood
# binaries; use the regular `release` profile for the GA artifacts
# that ship to operators.
[profile.release-thin]
inherits = "release"
codegen-units = 16
lto = "thin"

# Fast local release checks. This profile is intentionally opt-in:
# it prioritizes compile latency over final binary size/runtime.
# Do not use it for GA artifacts.
[profile.release-check]
inherits = "release"
debug = 1
lto = false
codegen-units = 256
incremental = true
strip = "none"

# Smaller dev cycle: incremental on, debug-info unpacked, no
# opt-level=0 surprises (kept at 0 — anything higher slows the
# inner edit-build loop without a corresponding correctness win).
[profile.dev]
opt-level = 0
debug = true
incremental = true
split-debuginfo = "unpacked"
