[package]
name = "corlinman-agent-client"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "gRPC client to the Python agent; classify + retry + tool-callback plumbing."

[dependencies]
corlinman-core = { path = "../corlinman-core" }
corlinman-proto = { path = "../corlinman-proto" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true, features = ["transport", "channel"] }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
backoff = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
