[package]
name = "corlinman-auto-rollback-cli"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "corlinman AutoRollback CLI (Phase 3 W1-B): scheduler-invokable subprocess that runs one AutoRollbackMonitor pass. Lives in its own crate because corlinman-gateway already depends on corlinman-auto-rollback's library — a binary-side gateway dep would cycle."

[dependencies]
corlinman-core = { path = "../corlinman-core" }
corlinman-evolution = { path = "../corlinman-evolution" }
corlinman-auto-rollback = { path = "../corlinman-auto-rollback" }
corlinman-gateway = { path = "../corlinman-gateway" }
corlinman-vector = { path = "../corlinman-vector" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "corlinman-auto-rollback"
path = "src/main.rs"
