[package]
name = "corlinman-auto-rollback"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "corlinman AutoRollback (Phase 3 W1-B): watches recently-applied EvolutionProposals for metrics regression and auto-reverts via the Applier's inverse_diff path."

[dependencies]
corlinman-core = { path = "../corlinman-core" }
corlinman-evolution = { path = "../corlinman-evolution" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = "3"
