[package]
name = "corlinman-canvas"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Canvas Host renderer (Phase 4 W3 C3). Pure-function transform from producer-submitted Canvas frame payloads (code, mermaid, table, latex, sparkline) into Tidepool-styled HTML fragments suitable for the admin UI transcript and other Canvas consumers."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Iter 2 — class-based syntect highlighter. `default-fancy` disables
# the oniguruma C dep and uses the pure-Rust `fancy-regex` engine
# (matches the design's "oniguruma off"). `html` brings in
# `ClassedHTMLGenerator` so we emit `cn-canvas-code-<scope>` class
# names that resolve to Tidepool `--tp-*` tokens via CSS — no
# server-side theme baking, theme switches re-paint at the browser.
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
    "html",
    "parsing",
] }
# Iter 3 — GFM markdown tables. `pulldown-cmark` is pure-Rust, no
# C deps, ~30 KB to the build. We only enable the parser; HTML
# emission goes through our own writer so we can scope class names
# and avoid the wrapper `<p>` tags `push_html` would emit.
pulldown-cmark = { version = "0.10", default-features = false }
# Iter 3 — CSV table source. Tiny crate; the `serde` feature is
# off because we hand-walk records.
csv = "1"
# Iter 4 — pure-Rust KaTeX implementation. The `katex-rs` crate is a
# from-scratch port (no JS engine, no V8) — matches the design's
# "katex-rs (no JS)". `default = []` already, so we pull only the
# core renderer; `wasm` / `backtrace` features stay off.
katex-rs = "0.2.4"

[dev-dependencies]
serde_json = { workspace = true }
