[package]
name = "corlinman-canvas"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Canvas Host renderer (Phase 4 W3 C3). Pure-function transform from producer-submitted Canvas frame payloads (code, mermaid, table, latex, sparkline) into Tidepool-styled HTML fragments suitable for the admin UI transcript and other Canvas consumers."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Iter 2 — class-based syntect highlighter. `default-fancy` disables
# the oniguruma C dep and uses the pure-Rust `fancy-regex` engine
# (matches the design's "oniguruma off"). `html` brings in
# `ClassedHTMLGenerator` so we emit `cn-canvas-code-<scope>` class
# names that resolve to Tidepool `--tp-*` tokens via CSS — no
# server-side theme baking, theme switches re-paint at the browser.
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
    "html",
    "parsing",
] }
# Iter 3 — GFM markdown tables. `pulldown-cmark` is pure-Rust, no
# C deps, ~30 KB to the build. We only enable the parser; HTML
# emission goes through our own writer so we can scope class names
# and avoid the wrapper `<p>` tags `push_html` would emit.
pulldown-cmark = { version = "0.10", default-features = false }
# Iter 3 — CSV table source. Tiny crate; the `serde` feature is
# off because we hand-walk records.
csv = "1"
# Iter 4 — pure-Rust KaTeX implementation. The `katex-rs` crate is a
# from-scratch port (no JS engine, no V8) — matches the design's
# "katex-rs (no JS)". `default = []` already, so we pull only the
# core renderer; `wasm` / `backtrace` features stay off.
katex-rs = "0.2.4"
# Iter 6 — mermaid adapter. `deno_core` (V8 + Tokio reactor) is the
# in-process JS engine the design committed to in
# `phase4-w3-c3-design.md` § "Sandboxing". The dep is gated behind
# the `mermaid` feature so the default workspace build does NOT
# download / link V8 (~600 MB prebuilt, multi-minute link time).
# Operators who need diagram rendering build with
# `--features mermaid`; the corresponding `mermaid.min.js` bundle +
# DOM shim is loaded at runtime by the adapter. With the feature off
# (default), the mermaid adapter returns a typed
# `CanvasError::Adapter` so producers see "mermaid disabled in this
# build" rather than a panic.
deno_core = { version = "0.400.0", optional = true }
# Iter 7 — content-addressed cache. `blake3` for the 256-bit cache
# key (fast, pure-Rust SIMD, no C deps); `lru` for a fixed-capacity
# `LruCache<[u8; 32], Arc<RenderedArtifact>>`. `lru` ships with no
# default features and stays under 30 KB to the build. Both crates
# are workspace-fresh; pinning here rather than adding to root
# `Cargo.toml` keeps the iter-7 diff scoped to the crate.
blake3 = { version = "1", default-features = false }
lru = { version = "0.12", default-features = false }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
# Enables the mermaid adapter (deno_core + V8). Cost: ~600 MB build
# artifact, multi-minute first compile. See the dep comment above.
mermaid = ["dep:deno_core"]
