[package]
name = "corlinman-channels"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Inbound channel adapters: QQ/OneBot v11 WebSocket, log stream, Telegram Bot HTTPS long-poll."

[dependencies]
corlinman-core = { path = "../corlinman-core" }
corlinman-proto = { path = "../corlinman-proto" }
corlinman-gateway-api = { path = "../corlinman-gateway-api" }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
http = { workspace = true }
tokio-util = { workspace = true }
time = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing-subscriber = { workspace = true }
