[package]
name = "corlinman-core"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types, errors, config schema, placeholder engine, cancel/backoff primitives. No I/O."

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
argon2 = { workspace = true }
dirs = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tempfile = "3"
