[package]
name = "corlinman-gateway"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "axum HTTP + WebSocket gateway; owns /v1/chat/completions, /logstream, /admin."

[lib]
path = "src/lib.rs"

[[bin]]
name = "corlinman-gateway"
path = "src/main.rs"

[dependencies]
corlinman-core = { path = "../corlinman-core" }
corlinman-proto = { path = "../corlinman-proto" }
corlinman-agent-client = { path = "../corlinman-agent-client" }
corlinman-gateway-api = { path = "../corlinman-gateway-api" }
corlinman-channels = { path = "../corlinman-channels" }
corlinman-plugins = { path = "../corlinman-plugins" }
corlinman-vector = { path = "../corlinman-vector" }
corlinman-hooks = { path = "../corlinman-hooks" }
corlinman-evolution = { path = "../corlinman-evolution" }
corlinman-auto-rollback = { path = "../corlinman-auto-rollback" }
corlinman-scheduler = { path = "../corlinman-scheduler" }
corlinman-tenant = { path = "../corlinman-tenant" }
corlinman-replay = { path = "../corlinman-replay" }
corlinman-identity = { path = "../corlinman-identity" }
corlinman-mcp = { path = "../corlinman-mcp" }
corlinman-skills = { path = "../corlinman-skills" }
corlinman-memory-host = { path = "../corlinman-memory-host" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
base64 = "0.22"
dashmap = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
schemars = { workspace = true }
sqlx = { workspace = true }
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.25"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tower = { workspace = true }
tempfile = "3"
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
corlinman-skills = { path = "../corlinman-skills" }
corlinman-memory-host = { path = "../corlinman-memory-host" }
toml = { workspace = true }
