[package]
name = "corlinman-integration-tests"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cross-crate integration harness for Batch 1 (hooks + placeholder engine + config v2 + manifest v2). Not a runtime crate — tests only."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
# No runtime deps — this crate only exists to host integration tests.

[dev-dependencies]
corlinman-hooks = { path = "../corlinman-hooks" }
corlinman-core = { path = "../corlinman-core" }
corlinman-plugins = { path = "../corlinman-plugins" }
corlinman-vector = { path = "../corlinman-vector" }
# B4 cross-subsystem chain: inbound (channels), distributed tools (wstool),
# approval gate (gateway middleware; reachable through the lib surface).
corlinman-channels = { path = "../corlinman-channels" }
corlinman-wstool = { path = "../corlinman-wstool" }
corlinman-gateway = { path = "../corlinman-gateway" }
corlinman-gateway-api = { path = "../corlinman-gateway-api" }
# B5-BE6 final regression also touches the NodeBridge stub server.
corlinman-nodebridge = { path = "../corlinman-nodebridge" }
# Phase 3 W1-A Step 4: cross-crate shadow loop test (proposals row →
# ShadowRunner → MemoryOpSimulator → shadow_done) needs both crates at
# dev-dep level.
corlinman-evolution = { path = "../corlinman-evolution" }
corlinman-shadow-tester = { path = "../corlinman-shadow-tester" }
# Phase 3 W1-B Step 4: cross-crate auto-rollback loop test (applied
# proposal + history baseline → injected error signals → monitor →
# rollback) needs auto-rollback's monitor + the gateway's applier.
corlinman-auto-rollback = { path = "../corlinman-auto-rollback" }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time", "sync"] }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tempfile = "3"
sha2 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
base64 = "0.22"
argon2 = { workspace = true }
