[package]
name = "corlinman-mcp"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Model Context Protocol (2024-11-05) server for corlinman. Hosts /mcp WebSocket endpoint and bridges MCP capabilities (tools/resources/prompts) to corlinman's PluginRegistry / MemoryHost / SkillRegistry. Schema crate is also reused by the C2 outbound MCP-stdio plugin client."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# Transport (iter 4): axum-mounted /mcp WebSocket route + a thin stdio
# JSON-RPC peer used by C2's outbound MCP plugin adapter.
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

# Capability adapters (iter 5-7): tools wraps PluginRegistry + runtime,
# prompts wraps SkillRegistry, resources wraps MemoryHost + skills.
anyhow = { workspace = true }
corlinman-core = { path = "../corlinman-core" }
corlinman-plugins = { path = "../corlinman-plugins" }
corlinman-skills = { path = "../corlinman-skills" }
corlinman-memory-host = { path = "../corlinman-memory-host" }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "process", "io-util"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
tempfile = "3"
