[package]
name = "corlinman-memory-host"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unified memory-source interface (local-sqlite / remote-http / federated) for corlinman hybrid search."

[dependencies]
corlinman-vector = { path = "../corlinman-vector" }

tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
wiremock = "0.6"
