[package]
name = "corlinman-newapi-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP client for QuantumNous/new-api admin API (channel discovery, health)."

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
